[gd_scene load_steps=3 format=3 uid="uid://dhgao3k34766f"]

[ext_resource type="Script" uid="uid://bbyjbumd138yb" path="res://scripts/options_menu.gd" id="1_ijpji"]
[ext_resource type="Script" uid="uid://if6uyslp8mw4" path="res://scripts/video.gd" id="1_liyum"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ijpji")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.47809583, 0.6862792, 0.55961865, 1)

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -304.0
offset_right = 200.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2

[node name="Intermediate" type="Control" parent="Settings"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2

[node name="VideoButton" type="Button" parent="Settings/Intermediate"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
text = "Video settings"

[node name="Intermediate2" type="Control" parent="Settings"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2

[node name="AudioButton" type="Button" parent="Settings/Intermediate2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Audio settings"

[node name="Intermediate3" type="Control" parent="Settings"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2

[node name="LanguagesButton" type="Button" parent="Settings/Intermediate3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Language"

[node name="Video" type="VBoxContainer" parent="." node_paths=PackedStringArray("resolution_option")]
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -13.5
offset_right = 22.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_liyum")
resolution_option = NodePath("ResolutionHandler/OptionButton")

[node name="Label" type="Label" parent="Video"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Video"
horizontal_alignment = 1

[node name="ResolutionHandler" type="HBoxContainer" parent="Video"]
layout_mode = 2

[node name="Label" type="Label" parent="Video/ResolutionHandler"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Resolution"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="Video/ResolutionHandler"]
layout_mode = 2
